# azure-event-hubs

c/eventhub_client/: CMakeLists.txt
c/eventhub_client/eventhub_cat/: CMakeLists.txt  eventhub_cat.c  eventhub_cat.h
c/eventhub_client/eventhub_cat/linux/: main.c
